# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: ci.yaml
python_template/: main.py
tests/: test_main.py
